2010-01-18  Steve Block  <steveblock@google.com>

        Reviewed by Adam Barth.

        Moves JSC-specific implementation of JavaString to a private implementation class.
        https://bugs.webkit.org/show_bug.cgi?id=33558

        Also modifies JavaField::name and JavaMethod::name to return const JavaString&, rather than UString::Rep*,
        which is JSC-specific. This allows this code to be used with both JSC and V8, as required by Android.

        No new tests, refactoring only.

        * WebCore.xcodeproj/project.pbxproj: Modified. Added JavaStringJSC.h
        * bridge/jni/jni_class.cpp: Modified.
        (JavaClass::JavaClass): Modified. Updates call sites of JavaField::name and JavaMethod::name.
        * bridge/jni/jni_runtime.h: Modified.
        (JSC::Bindings::JavaString::JavaString): Modified. Pass through to implementation.
        (JSC::Bindings::JavaString::UTF8String): Modified. Pass through to implementation.
        (JSC::Bindings::JavaString::uchars): Modified. Pass through to implementation.
        (JSC::Bindings::JavaString::length): Modified. Pass through to implementation.
        (JSC::Bindings::JavaString::operator UString): Modified. Pass through to implementation.
        (JSC::Bindings::JavaField::name): Modified. Pass through to implementation.
        (JSC::Bindings::JavaMethod::name): Modified. Pass through to implementation.
        * bridge/jni/jsc/JavaStringJSC.h: Added.
        (JSC::Bindings::JavaStringImpl::~JavaStringImpl):
        (JSC::Bindings::JavaStringImpl::init):
        (JSC::Bindings::JavaStringImpl::UTF8String):
        (JSC::Bindings::JavaStringImpl::uchars):
        (JSC::Bindings::JavaStringImpl::length):
        (JSC::Bindings::JavaStringImpl::uString):

2010-01-19  Steve Block  <steveblock@google.com>

        Reviewed by Adam Barth.

        Renames WebCore/bridge/runtime.[cpp|h] to WebCore/bridge/Bridge.[cpp|h]
        https://bugs.webkit.org/show_bug.cgi?id=33801
