@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2003 Apple Computer, Inc.  All rights reserved.
+ * Copyright (C) 2003, 2004, 2005, 2007, 2009, 2010 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -20,7 +20,7 @@
  * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY
  * OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
- * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
+ * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
 #ifndef JavaClassJSC_h
@@ -28,7 +28,7 @@
 
 #if ENABLE(MAC_JAVA_BRIDGE)
 
-#include <jni_runtime.h>
+#include "jni_runtime.h"
 #include <wtf/HashMap.h>
 
 namespace JSC {
@@ -37,20 +37,20 @@ namespace Bindings {
 
 class JavaClass : public Class {
 public:
-    JavaClass (jobject anInstance);
-    ~JavaClass ();
+    JavaClass(jobject);
+    ~JavaClass();
 
-    virtual MethodList methodsNamed(const Identifier&, Instance* instance) const;    
-    virtual Field *fieldNamed(const Identifier&, Instance* instance) const;
-    
+    virtual MethodList methodsNamed(const Identifier&, Instance*) const;
+    virtual Field* fieldNamed(const Identifier&, Instance*) const;
+
     bool isNumberClass() const;
     bool isBooleanClass() const;
     bool isStringClass() const;
-    
+
 private:
-    const char *_name;
-    FieldMap _fields;
-    MethodListMap _methods;
+    const char* m_name;
+    FieldMap m_fields;
+    MethodListMap m_methods;
 };
 
 } // namespace Bindings
